feat: implement analytics, settings, and polish backend

--- a/gmail-addon/appsscript.json
+++ b/gmail-addon/appsscript.json
@@ -25,17 +25,23 @@
     "universalActions": [
       {
         "text": "Settings",
-        "runFunction": "onGmailMessageOpen"
+        "runFunction": "onGmailSettings"
       }
     ]
   },
   "oauthScopes": [
+    "https://www.googleapis.com/auth/gmail.addons.execute",
     "https://www.googleapis.com/auth/gmail.addons.current.message.readonly",
     "https://www.googleapis.com/auth/gmail.addons.current.action.compose",
-    "https://www.googleapis.com/auth/gmail.addons.execute",
     "https://www.googleapis.com/auth/gmail.readonly",
     "https://www.googleapis.com/auth/script.external_request",
     "https://www.googleapis.com/auth/userinfo.email"
+  ],
+  "urlFetchWhitelist": [
+    "https://trackmail-frontend.vercel.app/",
+    "https://trackmail-backend1.onrender.com/",
+    "https://generativelanguage.googleapis.com/",
+    "https://api.openai.com/"
   ]
 }
 
