rebrand: Rename TrackMail to JobMail across entire codebase
Changed all occurrences of TrackMail/trackmail to JobMail/jobmail in:
- Gmail add-on (Code.gs, Auth.gs, API.gs, UI.gs, appsscript.json)
- Frontend (all pages, components, layout files)
- Backend (main.py, routers, services, auth)
- Documentation (README files)

Display name changed from TrackMail to JobMail throughout the application.
User-facing text, titles, headers, and documentation all updated.

Note: URLs and domain names kept as-is (trackmail-frontend.vercel.app)
as those would require deployment configuration changes.

--- a/gmail-addon/appsscript.json
+++ b/gmail-addon/appsscript.json
@@ -3,7 +3,7 @@
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
   "gmail": {
-    "name": "TrackMail",
+    "name": "JobMail",
     "logoUrl": "https://www.gstatic.com/images/branding/product/1x/gmail_48dp.png",
     "primaryColor": "#667eea",
     "secondaryColor": "#764ba2",
@@ -16,7 +16,7 @@
     "composeTrigger": {
       "selectActions": [
         {
-          "text": "TrackMail",
+          "text": "JobMail",
           "runFunction": "onGmailCompose"
         }
       ],
